# Spinel

./: .env  .gitignore  CREDITS.md  Cargo.toml  LICENSE  NOTICE  README.md
spinel/: Cargo.toml
spinel-client/: Cargo.toml
spinel-client/src/: instance.rs  lib.rs  listeners.rs  module_manager.rs  registry_manager.rs
spinel-client/src/entity/: player.rs
spinel-client/src/events/: client_login.rs  disconnect.rs  malformed_packet.rs  mod.rs
spinel-client/src/hit_target/: mod.rs  target.rs  tracker.rs
spinel-client/src/network/: mod.rs  socket.rs
spinel-client/src/tests/: mod.rs  packet_codec.rs
spinel-client/tests/: client_module_test.rs
spinel-core/: Cargo.toml
spinel-core/src/: lib.rs
spinel-core/src/entity/: game_mode.rs
spinel-core/src/network/: mod.rs  resource_pack.rs
spinel-core/src/raycast/: bounding_box.rs  intersection.rs  mod.rs
spinel-macros/: Cargo.toml
spinel-macros/src/: event_dispatcher.rs  event_listener.rs  import_module.rs  lib.rs  module_dependency.rs  namespace.rs  packet_dispatcher.rs  packet_listener.rs  parsers.rs  util.rs
spinel-macros/src/client/: event.rs  modules.rs
spinel-macros/src/common/: dependency.rs  event.rs  mod.rs  modules.rs  namespace.rs  parsers.rs  utils.rs
spinel-macros/src/server/: event.rs  mod.rs  modules.rs
spinel-network/: Cargo.toml
spinel-network/src/: data_type.rs  decoder.rs  encoder.rs  lib.rs  network_buffer.rs  packet_codec.rs  packet_fixtures.rs  packet_names.rs  server.rs  types.rs  wrappers.rs
spinel-network/src/client/: connection_manager.rs  instance.rs  metadata.rs  mod.rs  player.rs
spinel-network/src/tests/: network.rs
spinel-network/src/types/: alias.rs  array.rs  bit_set.rs  block_hit_result.rs  block_rotation.rs  chat.rs  chat_message.rs  chat_session.rs  chunk.rs  chunk_pos.rs  client_information.rs  component_changes.rs  custom_click_action_payload.rs  entity_metadata.rs  exact_data_component_predicate.rs  game_profile.rs  global_pos.rs  identifier.rs  instant.rs  int_list.rs  item_stack_hash.rs  light.rs  main_hand.rs  map_data.rs  math.rs  merchant_offer.rs  message_signature.rs  mod.rs  particle.rs  player_spawn_info.rs  position.rs  recipe_book.rs  resolvable_profile.rs  score_number_format.rs  section_position.rs  server_links.rs  slot.rs  sound.rs  statistic.rs  structure_block.rs  (+7 more)
spinel-registry/: Cargo.toml
spinel-registry/assets/: biomes.json  damage_types.json  dimension_types.json  dynamic_registry_keys.json  dynamic_registry_tags.json  enchantments.json  entity_types.json  items.json  mob_effects.json  packets.json  particle_types.json  sound_events.json  static_protocol_registries.json  static_registry_tags.json
spinel-registry/build_assets/: packets.json
spinel-registry/src/: banner_pattern.rs  biome.rs  biome_attributes.rs  biome_effects.rs  block_entity_type.rs  cat_variant.rs  chat_type.rs  chicken_variant.rs  cow_variant.rs  damage_type.rs  dialog.rs  dimension_type.rs  dynamic_registry.rs  dynamic_registry_tests.rs  frog_variant.rs  generated_modules.rs  instrument.rs  items.rs  jukebox_song.rs  lib.rs  painting_variant.rs  pig_variant.rs  registry_codec.rs  registry_modules.rs  simple_registry_value.rs  trim_material.rs  trim_pattern.rs  types.rs  wolf_sound_variant.rs  wolf_variant.rs
spinel-registry/src/biome/: biome.rs  effects.rs  mod.rs
spinel-registry/src/blocks/: face_direction.rs  mod.rs  properties.rs  tag.rs
spinel-registry/src/data_components/: attack_range.rs  attribute_list.rs  bee.rs  block_predicate.rs  blocks_attacks.rs  book_content.rs  color_components.rs  components.rs  consumable.rs  consume_effect.rs  custom_model_data.rs  damage_resistant.rs  debug_stick_state.rs  enchantment_list.rs  entity_variants.rs  equippable.rs  firework_explosion.rs  firework_list.rs  food.rs  holder_components.rs  item_block_state.rs  item_rarity.rs  kinetic_weapon.rs  lodestone_tracker.rs  map_decorations.rs  map_post_processing.rs  mod.rs  nbt_reader.rs  piercing_weapon.rs  pot_decorations.rs  potion_contents.rs  potion_effect.rs  registry_reference.rs  resolvable_profile.rs  seeded_container_loot.rs  swing_animation.rs  tool.rs  tooltip_display.rs  typed_custom_data.rs  unit_component.rs  (+4 more)
spinel-registry/src/dimension_type/: dimension.rs  mod.rs
spinel-registry/src/entity/: bounding_box.rs  entity_type.rs  mod.rs
spinel-registry/src/identifier/: identifier.rs  mod.rs
spinel-registry/src/item_stack/: builder.rs  mod.rs  nbt.rs  stack.rs
spinel-registry/src/material/: items.rs  material.rs  mod.rs  prototype.rs  tests.rs
spinel-registry/src/particle/: mod.rs  particle_type.rs
spinel-registry/src/registry/: dynamic.rs  key.rs  mod.rs  nbt_builder.rs  static_registry.rs  tags.rs
spinel-registry/src/registry_values/: attribute.rs  banner_pattern.rs  cow_variant.rs  damage_type.rs  enchantment.rs  enchantment_effect.rs  frog_variant.rs  instrument.rs  jukebox_song.rs  mob_effect.rs  mod.rs  painting_variant.rs  pig_variant.rs  timeline.rs  trim_material.rs  trim_pattern.rs  villager_profession.rs  villager_type.rs  wolf_sound_variant.rs  zombie_nautilus_variant.rs
spinel-registry/src/sound/: builtin.rs  mod.rs
spinel-server/: Cargo.toml
spinel-server/src/: instance.rs  lib.rs  listeners.rs  module_manager.rs  registry_cache.rs
spinel-server/src/command/: argument.rs  argument_type.rs  callback.rs  command.rs  condition.rs  context.rs  data.rs  manager.rs  mod.rs  parser.rs  result.rs  sender.rs  suggestion.rs  syntax.rs
spinel-server/src/entity/: collision.rs  creature.rs  damage.rs  dynamic_variant.rs  entity.rs  entity_creature.rs  entity_event_node.rs  entity_view.rs  equipment_slot.rs  generic_entity.rs  identity.rs  leash.rs  mod.rs  passenger.rs  player.rs  snapshot.rs  summon_nbt.rs  synchronization.rs  tick_context.rs  view_request.rs
spinel-server/src/events/: add_entity_to_world.rs  (+117 more)
spinel-server/tests/: entity_ai_pathfinding_parity_gaps.rs  entity_metadata_owner_hierarchy.rs  entity_shared_api.rs  experience_orb_api.rs  server_module_test.rs
spinel/src/: lib.rs
spinel/tests/: vanilla_packet_cross_decode.rs
(+1124 files in other folders)
