[package]
name = "spinel-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["client"]
client = []
server = []

[dependencies]
spinel-core = { path = "../spinel-core" }
spinel-network = { path = "../spinel-network", default-features = false, features = [
    "client",
] }
spinel-macros = { path = "../spinel-macros" }
spinel-events = { path = "../spinel-events" }
spinel-utils = { path = "../spinel-utils" }
spinel-nbt = { path = "../spinel-nbt" }
tokio = { version = "1", features = ["full"] }
rsa = "0.9"
rand = "0.9.2"
serde_json = "1.0"
inventory = "0.3.0"
uuid = { version = "1", features = ["v4"] }
