[package]
name = "spinel-core"
version = "0.1.0"
edition = "2024"

[dependencies]
spinel-events = { path = "../spinel-events" }
spinel-macros = { path = "../spinel-macros" }
spinel-registry = { path = "../spinel-registry" }
spinel-network = { path = "../spinel-network" }
spinel-nbt = { path = "../spinel-nbt" }
spinel-utils = { path = "../spinel-utils" }
serde_json = "1.0"
inventory = "0.3"
uuid = { version = "1.11", features = ["v4"] }