[package]
name = "spinel-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit"]}
quote = "1.0"
proc-macro2 = "1.0"
lazy_static = "1.4.0"
spinel-utils = { path = "../spinel-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"