[package]
name = "spinel-registry"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

[dependencies]
include_dir = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinel-utils = { path = "../spinel-utils" }

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.5.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "0.6"
