[package]
name = "spinel-registry"
version = "0.1.0"
edition = "2024"
build = "build/build.rs"

[dependencies]
include_dir = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinel-utils = { path = "../spinel-utils" }
spinel-nbt = { path = "../spinel-nbt" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.5.0"
spinel-utils = { path = "../spinel-utils" }
