[package]
name = "spinel-server"
version = "0.1.0"
edition = "2024"

[features]
default = ["server"]
server = []
client = []

[dependencies]
spinel-core = { path = "../spinel-core" }
spinel-registry = { path = "../spinel-registry" }
spinel-network = { path = "../spinel-network" }
spinel-utils = { path = "../spinel-utils" }
spinel-macros = { path = "../spinel-macros" }
spinel-nbt = { path = "../spinel-nbt" }
spinel-events = { path = "../spinel-events" }
tokio = { version = "1", features = ["full"] }
rsa = "0.9"
rand = "0.9.2"
inventory = "0.3"
uuid = "1.0"
serde_json = "1.0"
base64 = "0.22"