[package]
name = "spinel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]}
uuid = { version = "1", features = ["v4"] }
inventory = "0.3.0"
spinel-macros = { path = "../spinel-macros" }
spinel-events = { path = "../spinel-events" }
spinel-network = { path = "../spinel-network" }
spinel-nbt = { path = "../spinel-nbt" }
spinel-utils = { path = "../spinel-utils" }

#Encryption Dependencies
rsa = "0.9"
rand = "0.9.2"