[package]
name = "spinel"
version = "0.1.0"
edition = "2021"

[dependencies]
spinel-events = { path = "../spinel-events" }
spinel-macros = { path = "../spinel-macros" }
spinel-registry = { path = "../spinel-registry" }
spinel-network = { path = "../spinel-network" }
spinel-nbt = { path = "../spinel-nbt" }
spinel-utils = { path = "../spinel-utils" }
uuid = { version = "1.11", features = ["v4"] }
serde_json = "1.0"
inventory = "0.3"
tokio = { version = "1", features = ["full"] }

#Encryption Dependencies
rsa = "0.9"
rand = "0.9.2"