[package]
name = "spinel"
version = "0.1.0"
edition = "2024"

[dependencies]
spinel-core = { path = "../spinel-core" }
spinel-events = { path = "../spinel-events" }
spinel-macros = { path = "../spinel-macros" }
spinel-registry = { path = "../spinel-registry" }
spinel-network = { path = "../spinel-network" }
spinel-nbt = { path = "../spinel-nbt" }
spinel-utils = { path = "../spinel-utils" }
serde_json = "1.0"
inventory = "0.3"
tokio = { version = "1", features = ["full"] }

# Encryption Dependencies
rsa = "0.9"
rand = "0.9.2"

# Optional dependencies for client feature
spinel-client = { path = "../spinel-client", optional = true }
uuid = { version = "1.11", features = ["v4"], optional = true }

# Optional dependencies for server feature
spinel-server = { path = "../spinel-server", optional = true }

[features]
default = ["server"]
server = ["spinel-network/server", "dep:uuid", "dep:spinel-server", "spinel-macros/server"]
client = ["spinel-network/client", "dep:spinel-client", "dep:uuid", "spinel-macros/client"]